Fix scroll issues / cropping

--- a/keycloak/themes/tbpro/assets/css/main.css
+++ b/keycloak/themes/tbpro/assets/css/main.css
@@ -9,7 +9,7 @@
 html,
 body,
 div#app {
-  height: 100%;
+  min-height: 100vh;
   margin: 0;
   font-family: Inter, "sans-serif";
 }
